WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165266
[CSS Parser] Fix font-variant parsing
https://bugs.webkit.org/show_bug.cgi?id=165266
Summary
[CSS Parser] Fix font-variant parsing
Dave Hyatt
Reported
2016-12-01 13:05:34 PST
[CSS Parser] Fix font-variant parsing
Attachments
Patch
(13.10 KB, patch)
2016-12-01 13:12 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-01 13:12:49 PST
Created
attachment 295882
[details]
Patch
Dave Hyatt
Comment 2
2016-12-01 13:42:16 PST
Fixed in
r209199
. efl bot caught a real error... changed the nullptr to false.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug