[CSS Parser] Fix font-variant parsing https://bugs.webkit.org/show_bug.cgi?id=165266

Reviewed by Dean Jackson.

Source/WebCore:

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeFontVariantEastAsian):
(WebCore::consumeFontVariantAlternates):
(WebCore::consumeFontVariantPosition):
(WebCore::CSSPropertyParser::parseSingleValue):
(WebCore::CSSPropertyParser::parseFontFaceDescriptor):
(WebCore::CSSPropertyParser::consumeFontVariantShorthand):
(WebCore::consumeFontVariantList): Deleted.

LayoutTests:

* TestExpectations:



Canonical link: https://commits.webkit.org/182885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209199 268f45cc-cd09-0410-ab3c-d52691b4dbfc